--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Numerical Python Part 1, 2 & 3
+title: Numerical Programming with Python Part 1, 2 & 3
 author: The Jupyter Book Community
 logo: logo.png
 
