--- a/_config.yml
+++ b/_config.yml
@@ -33,3 +33,7 @@ launch_buttons:
 html:
   use_issues_button: true
   use_repository_button: true
+
+sphinx:
+  config:
+    html_extra_path: ['assets']
